src/objects/LI_Opportunity__x.object
<CustomObject>
    <fields>
        <fullName>Opp_Plan_Exception_Reason_c__c</fullName>
        <externalDeveloperName>Opp_Plan_Exception_Reason__c</externalDeveloperName>
        <label>Opportunity Plan Exception Reason</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OpportunityType_c__c</fullName>
        <externalDeveloperName>OpportunityType__c</externalDeveloperName>
        <label>Opportunity Type</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Opportunity_Count_c__c</fullName>
        <externalDeveloperName>Opportunity_Count__c</externalDeveloperName>
        <label>Opportunity Count</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity_Number_c__c</fullName>
        <externalDeveloperName>Opportunity_Number__c</externalDeveloperName>
        <label>Opportunity Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Oppty_Auto_Num_c__c</fullName>
        <externalDeveloperName>Oppty_Auto_Num__c</externalDeveloperName>
        <label>Oppty Auto Num</label>
        <length>30</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Oppty_Plan_Exist_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>Oppty_Plan_Exist__c</externalDeveloperName>
        <label>Oppty Plan Exist</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Other_Competitor_c__c</fullName>
        <externalDeveloperName>Other_Competitor__c</externalDeveloperName>
        <label>Other Competitor</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OwnerId__c</fullName>
        <externalDeveloperName>OwnerId</externalDeveloperName>
        <label>Owner ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PA_BPS_Flag_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>PA_BPS_Flag__c</externalDeveloperName>
        <label>PA-BPS Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PA_CAD_Flag_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>PA_CAD_Flag__c</externalDeveloperName>
        <label>PA-CAD Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PA_CV_Flag_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>PA_CV_Flag__c</externalDeveloperName>
        <label>PA-CV Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PA_IMDW_Flag_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>PA_IMDW_Flag__c</externalDeveloperName>
        <label>PA-IMDW Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PA_LSCM_Flag_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>PA_LSCM_Flag__c</externalDeveloperName>
        <label>PA-LSCM Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PA_PMA_Flag_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>PA_PMA_Flag__c</externalDeveloperName>
        <label>PA-PMA Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PA_PPD_Flag_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>PA_PPD_Flag__c</externalDeveloperName>
        <label>PA-PPS Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PA_PerM_Flag_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>PA_PerM_Flag__c</externalDeveloperName>
        <label>PA-PerM Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PA_PreSS_Flag_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>PA_PreSS_Flag__c</externalDeveloperName>
        <label>PA-PreSS Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PA_ProM_Flag_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>PA_ProM_Flag__c</externalDeveloperName>
        <label>PA-ProM Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PA_ProSS_Flag_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>PA_ProSS_Flag__c</externalDeveloperName>
        <label>PA-ProSS Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PA_SAM_Flag_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>PA_SAM_Flag__c</externalDeveloperName>
        <label>PA-SAM Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PIC_Email_c__c</fullName>
        <externalDeveloperName>PIC_Email__c</externalDeveloperName>
        <label>PIC Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>PIC_Entity_c__c</fullName>
        <externalDeveloperName>PIC_Entity__c</externalDeveloperName>
        <label>PIC Entity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cambridge (CAM)</fullName>
                </value>
                <value>
                    <fullName>Core (COR)</fullName>
                </value>
                <value>
                    <fullName>Fricke &amp; Pirk (FP)</fullName>
                </value>
                <value>
                    <fullName>Harewood (HW)</fullName>
                </value>
                <value>
                    <fullName>HEDM</fullName>
                </value>
                <value>
                    <fullName>HORE (HOR)</fullName>
                </value>
                <value>
                    <fullName>LOCAL (LOC)</fullName>
                </value>
                <value>
                    <fullName>LSCM</fullName>
                </value>
                <value>
                    <fullName>M&amp;H</fullName>
                </value>
                <value>
                    <fullName>Med Radar (MR)</fullName>
                </value>
                <value>
                    <fullName>Merlin (MLN)</fullName>
                </value>
                <value>
                    <fullName>M-TAG (MTG)</fullName>
                </value>
                <value>
                    <fullName>Other HEOR (HE)</fullName>
                </value>
                <value>
                    <fullName>Other IM (IM)</fullName>
                </value>
                <value>
                    <fullName>Merg (MRG)</fullName>
                </value>
                <value>
                    <fullName>PharMetric (PHA)</fullName>
                </value>
                <value>
                    <fullName>Pitre (PTR)</fullName>
                </value>
                <value>
                    <fullName>Groupe PR (PR)</fullName>
                </value>
                <value>
                    <fullName>Regional OH (ROH)</fullName>
                </value>
                <value>
                    <fullName>SAI</fullName>
                </value>
                <value>
                    <fullName>SDG</fullName>
                </value>
                <value>
                    <fullName>Taskarena</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PIC_Name_c__c</fullName>
        <externalDeveloperName>PIC_Name__c</externalDeveloperName>
        <label>PIC Name</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PIC_Required_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>PIC_Required__c</externalDeveloperName>
        <label>PIC Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PIC_Sales_Org_c__c</fullName>
        <externalDeveloperName>PIC_Sales_Org__c</externalDeveloperName>
        <label>PIC Sales Org</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Acceletra</fullName>
                </value>
                <value>
                    <fullName>Areks France</fullName>
                </value>
                <value>
                    <fullName>Cambridge Pharma UK</fullName>
                </value>
                <value>
                    <fullName>CORE Center</fullName>
                </value>
                <value>
                    <fullName>CORE Holding</fullName>
                </value>
                <value>
                    <fullName>Health Outcomes Research</fullName>
                </value>
                <value>
                    <fullName>HEDM Belgium</fullName>
                </value>
                <value>
                    <fullName>IHA, IMS Health Hergiswil</fullName>
                </value>
                <value>
                    <fullName>IMS Poland</fullName>
                </value>
                <value>
                    <fullName>IMS AG Switzerland</fullName>
                </value>
                <value>
                    <fullName>IMS America</fullName>
                </value>
                <value>
                    <fullName>IMS Belgium</fullName>
                </value>
                <value>
                    <fullName>IMS Czech</fullName>
                </value>
                <value>
                    <fullName>IMS France</fullName>
                </value>
                <value>
                    <fullName>IMS Germany</fullName>
                </value>
                <value>
                    <fullName>IMS Health Canada Consulting</fullName>
                </value>
                <value>
                    <fullName>IMS Health Ireland</fullName>
                </value>
                <value>
                    <fullName>IMS Health Netherlands BV</fullName>
                </value>
                <value>
                    <fullName>IMS Health UK Ltd</fullName>
                </value>
                <value>
                    <fullName>IMS Health US</fullName>
                </value>
                <value>
                    <fullName>IMS Health US - Envision</fullName>
                </value>
                <value>
                    <fullName>IMS Health US - RKG</fullName>
                </value>
                <value>
                    <fullName>IMS Health US (SAI)</fullName>
                </value>
                <value>
                    <fullName>IMS Hellas Greece</fullName>
                </value>
                <value>
                    <fullName>IMS Hospital UK</fullName>
                </value>
                <value>
                    <fullName>IMS Hungary</fullName>
                </value>
                <value>
                    <fullName>IMS Italy</fullName>
                </value>
                <value>
                    <fullName>IMS Portugal</fullName>
                </value>
                <value>
                    <fullName>IMS South Africa</fullName>
                </value>
                <value>
                    <fullName>IMS Spain</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PIC_User_c__c</fullName>
        <externalDeveloperName>PIC_User__c</externalDeveloperName>
        <label>PIC User</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PO_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>PO__c</externalDeveloperName>
        <label>PO</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Partner_c__c</fullName>
        <externalDeveloperName>Partner__c</externalDeveloperName>
        <label>Partner</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AC Nielsen</fullName>
                </value>
                <value>
                    <fullName>Acxiom</fullName>
                </value>
                <value>
                    <fullName>AllScripts</fullName>
                </value>
                <value>
                    <fullName>BI (Business Intelligence)</fullName>
                </value>
                <value>
                    <fullName>Bio Tech Watch</fullName>
                </value>
                <value>
                    <fullName>C3i</fullName>
                </value>
                <value>
                    <fullName>Callidus Software</fullName>
                </value>
                <value>
                    <fullName>Clearview Projects</fullName>
                </value>
                <value>
                    <fullName>Cognizant</fullName>
                </value>
                <value>
                    <fullName>ComScore</fullName>
                </value>
                <value>
                    <fullName>CRM</fullName>
                </value>
                <value>
                    <fullName>CSC</fullName>
                </value>
                <value>
                    <fullName>Electronic Ink</fullName>
                </value>
                <value>
                    <fullName>Find/SVP</fullName>
                </value>
                <value>
                    <fullName>Hamacher</fullName>
                </value>
                <value>
                    <fullName>HarrisInteractive</fullName>
                </value>
                <value>
                    <fullName>Healthbanks</fullName>
                </value>
                <value>
                    <fullName>IBM Global Services</fullName>
                </value>
                <value>
                    <fullName>InDepth</fullName>
                </value>
                <value>
                    <fullName>Information Resources Inc (IRI)</fullName>
                </value>
                <value>
                    <fullName>IntrinsiQ</fullName>
                </value>
                <value>
                    <fullName>Ni3 AG</fullName>
                </value>
                <value>
                    <fullName>No Partner</fullName>
                </value>
                <value>
                    <fullName>Premier</fullName>
                </value>
                <value>
                    <fullName>Proscape</fullName>
                </value>
                <value>
                    <fullName>Relationship Marketing Inc.</fullName>
                </value>
                <value>
                    <fullName>SAS</fullName>
                </value>
                <value>
                    <fullName>ScriptRx</fullName>
                </value>
                <value>
                    <fullName>Skura Corp</fullName>
                </value>
                <value>
                    <fullName>Synergistix</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Patient_level_Data_c__c</fullName>
        <externalDeveloperName>Patient_level_Data__c</externalDeveloperName>
        <label>Patient Transaction level Data?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Potential_IMS_Solution_Details_c__c</fullName>
        <externalDeveloperName>Potential_IMS_Solution_Details__c</externalDeveloperName>
        <label>Potential IMS Solution Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Pricebook2Id__c</fullName>
        <externalDeveloperName>Pricebook2Id</externalDeveloperName>
        <label>Price Book ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pricing_Request_c__c</fullName>
        <externalDeveloperName>Pricing_Request__c</externalDeveloperName>
        <label>Pricing Request</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pricing_calculator_Rate_c__c</fullName>
        <externalDeveloperName>Pricing_calculator_Rate__c</externalDeveloperName>
        <label>Pricing Assistant Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Principal_In_Charge_Split_c__c</fullName>
        <externalDeveloperName>Principal_In_Charge_Split__c</externalDeveloperName>
        <label>Principal In Charge % Split</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Principal_In_Charge_c__c</fullName>
        <externalDeveloperName>Principal_In_Charge__c</externalDeveloperName>
        <label>Principal In Charge</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prior_Amount_c__c</fullName>
        <externalDeveloperName>Prior_Amount__c</externalDeveloperName>
        <label>Prior Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Prior_Opportunity_ID_c__c</fullName>
        <externalDeveloperName>Prior_Opportunity_ID__c</externalDeveloperName>
        <label>Original/Prior Opp</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Probability__c</fullName>
        <externalDeveloperName>Probability</externalDeveloperName>
        <label>Probability (%)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Project_Collect_And_Report_c__c</fullName>
        <externalDeveloperName>Project_Collect_And_Report__c</externalDeveloperName>
        <label>collect and report adverse events?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Project_Regulate_c__c</fullName>
        <externalDeveloperName>Project_Regulate__c</externalDeveloperName>
        <label>Project Regulated?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Not Sure</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Proposal_Due_c__c</fullName>
        <externalDeveloperName>Proposal_Due__c</externalDeveloperName>
        <label>Proposal Due</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Proposal_Review1_Date_c__c</fullName>
        <externalDeveloperName>Proposal_Review1_Date__c</externalDeveloperName>
        <label>Proposal Review date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Proposal_Review_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>Proposal_Review__c</externalDeveloperName>
        <label>Proposal Review</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Proposal_review_date_c__c</fullName>
        <externalDeveloperName>Proposal_review_date__c</externalDeveloperName>
        <label>Proposal date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Q_Actual_Probability_c__c</fullName>
        <externalDeveloperName>Q_Actual_Probability__c</externalDeveloperName>
        <label>Q Actual Probability</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>&lt; 10</fullName>
                </value>
                <value>
                    <fullName>25</fullName>
                </value>
                <value>
                    <fullName>50</fullName>
                </value>
                <value>
                    <fullName>75</fullName>
                </value>
                <value>
                    <fullName>90</fullName>
                </value>
                <value>
                    <fullName>100</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Q_Indication_Name_c__c</fullName>
        <externalDeveloperName>Q_Indication_Name__c</externalDeveloperName>
        <label>Q Indication Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Q_Lead_Line_of_Business_c__c</fullName>
        <externalDeveloperName>Q_Lead_Line_of_Business__c</externalDeveloperName>
        <label>Q Lead Line of Business</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>BioServices</fullName>
                </value>
                <value>
                    <fullName>Cardiac Safety ECG Equipment</fullName>
                </value>
                <value>
                    <fullName>Commercial Team</fullName>
                </value>
                <value>
                    <fullName>Confidence Level</fullName>
                </value>
                <value>
                    <fullName>Contract Needed at this Time? (Yes/No)</fullName>
                </value>
                <value>
                    <fullName>Franklin Covey SPI tool used &amp; attached</fullName>
                </value>
                <value>
                    <fullName>Geographic Expansion</fullName>
                </value>
                <value>
                    <fullName>GSK Competitive Bid</fullName>
                </value>
                <value>
                    <fullName>Industry Type</fullName>
                </value>
                <value>
                    <fullName>Lead Location</fullName>
                </value>
                <value>
                    <fullName>Local Business Unit</fullName>
                </value>
                <value>
                    <fullName>Local China Q2Lab</fullName>
                </value>
                <value>
                    <fullName>Market Insight WorkUp utilised?</fullName>
                </value>
                <value>
                    <fullName>Patient Type</fullName>
                </value>
                <value>
                    <fullName>Phase 1 Study Type</fullName>
                </value>
                <value>
                    <fullName>Q2 Budget Tool</fullName>
                </value>
                <value>
                    <fullName>Service Segment</fullName>
                </value>
                <value>
                    <fullName>Service Segment Import/Export?</fullName>
                </value>
                <value>
                    <fullName>Use of Analytics</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Q_Opportunity_Currency_c__c</fullName>
        <externalDeveloperName>Q_Opportunity_Currency__c</externalDeveloperName>
        <label>Q Opportunity Currency</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Q_Opportunity_Number_c__c</fullName>
        <externalDeveloperName>Q_Opportunity_Number__c</externalDeveloperName>
        <label>Quintiles Opportunity Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Q_Opportunity_Sharing_Status_c__c</fullName>
        <externalDeveloperName>Q_Opportunity_Sharing_Status__c</externalDeveloperName>
        <label>Q Opportunity Sharing Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Shared</fullName>
                </value>
                <value>
                    <fullName>Sharing Initiated</fullName>
                </value>
                <value>
                    <fullName>Shared</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Q_Phase_c__c</fullName>
        <externalDeveloperName>Q_Phase__c</externalDeveloperName>
        <label>Q Phase</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Phase 1</fullName>
                </value>
                <value>
                    <fullName>Phase 2</fullName>
                </value>
                <value>
                    <fullName>Phase 3</fullName>
                </value>
                <value>
                    <fullName>Phase 3b</fullName>
                </value>
                <value>
                    <fullName>Phase 4</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Q_Primary_Contact_Email_c__c</fullName>
        <externalDeveloperName>Q_Primary_Contact_Email__c</externalDeveloperName>
        <label>Q Primary Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Q_Primary_Contact_Name_c__c</fullName>
        <externalDeveloperName>Q_Primary_Contact_Name__c</externalDeveloperName>
        <label>Q Primary Contact Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Q_Primary_Contact_Phone_c__c</fullName>
        <externalDeveloperName>Q_Primary_Contact_Phone__c</externalDeveloperName>
        <label>Q Primary Contact Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Q_Primary_Contact_Role_c__c</fullName>
        <externalDeveloperName>Q_Primary_Contact_Role__c</externalDeveloperName>
        <label>Q Primary Contact Role</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Q_Project_Manager_Name_c__c</fullName>
        <externalDeveloperName>Q_Project_Manager_Name__c</externalDeveloperName>
        <label>Q Project Manager Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Q_Therapy_Area_c__c</fullName>
        <externalDeveloperName>Q_Therapy_Area__c</externalDeveloperName>
        <label>Q Therapy Area</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Q_Total_Project_Awarded_Price_c__c</fullName>
        <externalDeveloperName>Q_Total_Project_Awarded_Price__c</externalDeveloperName>
        <label>Q Total Project Awarded Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Q_Total_Signed_Contract_Price_c__c</fullName>
        <externalDeveloperName>Q_Total_Signed_Contract_Price__c</externalDeveloperName>
        <label>Q Total Signed Contract Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Qualified_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>Qualified__c</externalDeveloperName>
        <label>Qualified</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Quintiles_Opportunity_Owner_c__c</fullName>
        <externalDeveloperName>Quintiles_Opportunity_Owner__c</externalDeveloperName>
        <label>Quintiles Opportunity Owner</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RAF_Preparation_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>RAF_Preparation__c</externalDeveloperName>
        <label>RAF Preparation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RFP_Release_c__c</fullName>
        <externalDeveloperName>RFP_Release__c</externalDeveloperName>
        <label>RFP Release</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RecordTypeId__c</fullName>
        <externalDeveloperName>RecordTypeId</externalDeveloperName>
        <label>Record Type ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referral_Owner_c__c</fullName>
        <externalDeveloperName>Referral_Owner__c</externalDeveloperName>
        <label>Referral Owner</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region_Territory_c__c</fullName>
        <externalDeveloperName>Region_Territory__c</externalDeveloperName>
        <label>Main Delivery Country</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Albania</fullName>
                </value>
                <value>
                    <fullName>Algeria</fullName>
                </value>
                <value>
                    <fullName>Angola</fullName>
                </value>
                <value>
                    <fullName>APAC Regional</fullName>
                </value>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Armenia</fullName>
                </value>
                <value>
                    <fullName>Aruba</fullName>
                </value>
                <value>
                    <fullName>ASEAN Regional</fullName>
                </value>
                <value>
                    <fullName>Asia Mid Markets</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Azerbaijan</fullName>
                </value>
                <value>
                    <fullName>Bahrain</fullName>
                </value>
                <value>
                    <fullName>Bangladesh</fullName>
                </value>
                <value>
                    <fullName>Barbados</fullName>
                </value>
                <value>
                    <fullName>Belarus</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Benin</fullName>
                </value>
                <value>
                    <fullName>Bermuda</fullName>
                </value>
                <value>
                    <fullName>Bolivia</fullName>
                </value>
                <value>
                    <fullName>Bosnia</fullName>
                </value>
                <value>
                    <fullName>Botswana</fullName>
                </value>
                <value>
                    <fullName>Brazil</fullName>
                </value>
                <value>
                    <fullName>Bulgaria</fullName>
                </value>
                <value>
                    <fullName>Burkina Faso</fullName>
                </value>
                <value>
                    <fullName>Cameroon</fullName>
                </value>
                <value>
                    <fullName>Canada</fullName>
                </value>
                <value>
                    <fullName>Cayman Islands</fullName>
                </value>
                <value>
                    <fullName>Chad</fullName>
                </value>
                <value>
                    <fullName>Chile</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Region_c__c</fullName>
        <externalDeveloperName>Region__c</externalDeveloperName>
        <label>Business Unit</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Asia Pacific</fullName>
                </value>
                <value>
                    <fullName>Central East and South Europe</fullName>
                </value>
                <value>
                    <fullName>Japan</fullName>
                </value>
                <value>
                    <fullName>Latin America</fullName>
                </value>
                <value>
                    <fullName>NEMEA</fullName>
                </value>
                <value>
                    <fullName>US and Canada Region</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Regional_Deal_Identifier_c__c</fullName>
        <externalDeveloperName>Regional_Deal_Identifier__c</externalDeveloperName>
        <label>Regional Deal Identifier</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Relationship_Manager_c__c</fullName>
        <externalDeveloperName>Relationship_Manager__c</externalDeveloperName>
        <label>Relationship Manager</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Remarks_c__c</fullName>
        <externalDeveloperName>Remarks__c</externalDeveloperName>
        <label>Remarks</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Renewal_Task_c__c</fullName>
        <externalDeveloperName>Renewal_Task__c</externalDeveloperName>
        <label>Renewal Task</label>
        <length>18</length>
        <type>Text</type>
    </fields>
</CustomObject>